<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_pro_deploybot</name>
  <version>0.1.0</version>
  <description>Launch stack for TurtleBot3 Burger Pro SLAM with deploy_real_robot policy navigation.</description>
  <maintainer email="user@todo.todo">turtlebot3 user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>turtlebot3_pro_gazebo</exec_depend>
  <exec_depend>my_irl_robot</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
