<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_pro_description</name>
  <version>0.1.0</version>
  <description>Description package for modified TurtleBot3 Burger Pro (RPLIDAR A2 + D435i).</description>
  <maintainer email="user@todo.todo">turtlebot3 user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
