<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_pro_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo simulation package for TurtleBot3 Burger Pro.</description>
  <maintainer email="user@todo.todo">turtlebot3 user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_pro_bringup</exec_depend>
  <exec_depend>turtlebot3_pro_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
