<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_pro_rtabslam</name>
  <version>0.0.1</version>
  <description>RTAB-MAP SLAM with RPLIDAR A2M12 and RealSense D435i on TurtleBot3</description>
  <maintainer email="user@todo.todo">TurtleBot3 RTAB-MAP SLAM User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--
    运行依赖说明：
    - rplidar_ros / realsense2_camera：传感器驱动
    - rtabmap_ros / rtabmap_launch：RTAB-Map SLAM 与相关工具
    - nav2_msgs：桥接 RViz goal 到 Nav2 action（NavigateToPose）
    - turtlebot3_bringup / turtlebot3_node：底盘驱动与 URDF/TF 发布
    - robot_state_publisher / joint_state_publisher / xacro：机器人模型与 TF 支撑
    - rviz2：可视化与调试
  -->
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>rtabmap_launch</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_node</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
